--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
             <div class="slide">
                 <h2>Newsletter</h2>
                 <h3>Subscribe to our awesome newsletter!</h3>
-                <form method="post" action="newsletter.php" class="validate text-center">
+                <form method="post" action="newsletter.json" class="validate text-center">
                     <input class="input-block-level" name="email" type="email" placeholder="E-mail" required />
                     <span class="btn btn-large btn-block submit"><i class="icon-envelope icon-white"></i> Submit</span>
                 </form>
             </div>
             <div class="slide">
                 <h2>Contact</h2>
-                <form method="post" action="contact.php" class="validate text-center">
+                <form method="post" action="contact.json" class="validate text-center">
                     <input class="input-block-level" name="name" type="text" placeholder="Name" required />
                     <input class="input-block-level" name="email" type="email" placeholder="E-mail" required />
                     <textarea class="input-block-level" name="content" placeholder="Your message" required ></textarea>
